--- a/Mael.html
+++ b/Mael.html
@@ -7,8 +7,8 @@
         <title>CUMPLE MAEL</title>
         <meta property="og:title" content="¡Estás Invitado a mi Fiesta!">
         <meta property="og:description" content="MAEL CUMPLE 3!">
-        <meta property="og:image" content="https://cumple-de.github.io/videos/002bc9c92fc4f0284513e13a9191cadd.jpg">
-        <meta property="og:url" content="https://cumple-de.github.io">
+        <meta property="og:image" content="https://cumple-15.github.io/videos/002bc9c92fc4f0284513e13a9191cadd.jpg">
+        <meta property="og:url" content="https://cumple-15.github.io">
         <meta property="og:type" content="website">
         <link rel="icon" href="26387fa4f5b1e3f7b6217b27d79bf264.png" type="image/png" sizes="16x16">
         <link rel="icon" href="2d0b56e7e51cf11036ad8734bdb67e2d.png" type="image/png" sizes="32x32">
